# apps/auth-service/src/controller/auth.controller.ts
@@ -1,5 +1,5 @@
 import { Request, Response, NextFunction } from "express";
-import { checkOtpRestrictions, sendOtp, trackOtpRequests, validateRegistrationData, verifyOtp } from "../utils/auth.helper";
+import { checkOtpRestrictions, handleForgotPassword, sendOtp, trackOtpRequests, validateRegistrationData, verifyForgotPasswordOtp, verifyOtp } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
 import { AuthError, ValidationError } from "@packages/error-handler";
 import bcrypt from "bcryptjs";
@@ -53,6 +53,7 @@ export const verifyUser = async (req:Request, res:Response, next:NextFunction) =
     }
 }
 
+// User login
 export const loginUser = async (req: Request, res: Response, next: NextFunction) => {
     try {
         const {email, password} = req.body;
@@ -85,5 +86,53 @@ export const loginUser = async (req: Request, res: Response, next: NextFunction)
 
     } catch (error) {
         return next(error)
+    }
+}
+
+// User forgot password
+export const forgotPassword = async (req: Request, res: Response, next: NextFunction) => {
+    await handleForgotPassword(req, res, next, 'user');
+}
+
+// Verify forget password OTP
+export const verifyUserForgetPassword = async (req: Request, res: Response, next: NextFunction) => {
+    await verifyForgotPasswordOtp(req, res, next);
+}
+
+// Reset user password
+export const resetPassword = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const {email, newPassword} = req.body;
+        
+        if (!email || !newPassword){
+            return next (new ValidationError("Email and password are required!"));
+        }
+        const user = await prisma.users.findUnique({where: {email}});
+
+        if (!user){
+            return next (new ValidationError("User doesn't exist!"));
+        }
+
+        // compare new password with the existing 
+        const isSamePassword = await bcrypt.compare(newPassword, user?.password!);
+        if (isSamePassword){
+            return next (new ValidationError("New password can't be the same as the old password!"));
+        }
+
+        // Hash the new password
+        const hashedPassword = await bcrypt.hash(newPassword, 10);
+
+        await prisma.users.update({
+            where: {email},
+            data: {password: hashedPassword}
+        });
+
+        res.status(200).json({
+            success: true,
+            message: "Password reset sucessful!"
+        })
+
+    } catch (error) {
+        next(error);
     }
 }
